<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8F8F8F"
    tools:context=".CatagoryScreen">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:alignmentMode="alignMargins"
        android:alwaysDrawnWithCache="false"
        android:animateLayoutChanges="false"
        android:animationCache="false"
        android:clickable="false"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:columnCount="2"
        android:descendantFocusability="afterDescendants"
        android:drawingCacheQuality="auto"
        android:orientation="horizontal"
        android:padding="5dp"
        android:rowCount="5"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <!--        <Button-->
        <!--            android:id="@+id/temaki"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="300dp"-->
        <!--            android:layout_row="0"-->
        <!--            android:layout_rowSpan="2"-->
        <!--            android:layout_column="0"-->
        <!--            android:layout_gravity="start"-->
        <!--            android:background="@drawable/temaki"-->
        <!--            android:fontFamily="@font/montserrat"-->
        <!--            android:text="@string/category_temaki"-->
        <!--            android:textColor="@color/colorWhite" />-->

        <!--        <Button-->
        <!--            android:id="@+id/uramaki"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="150dp"-->
        <!--            android:layout_row="0"-->
        <!--            android:layout_rowSpan="1"-->
        <!--            android:layout_column="1"-->
        <!--            android:layout_gravity="start"-->
        <!--            android:background="@drawable/uramaki"-->
        <!--            android:fontFamily="@font/montserrat"-->
        <!--            android:gravity="center_horizontal|center_vertical"-->
        <!--            android:text="@string/category_uramaki"-->
        <!--            android:textColor="@color/colorWhite"-->
        <!--            android:translationX="25dp"-->
        <!--            android:visibility="visible" />-->

        <!--        <Button-->
        <!--            android:id="@+id/maki"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="150dp"-->
        <!--            android:layout_row="1"-->
        <!--            android:layout_rowSpan="1"-->
        <!--            android:layout_column="1"-->
        <!--            android:layout_gravity="start"-->
        <!--            android:background="@drawable/maki"-->
        <!--            android:fontFamily="@font/montserrat"-->
        <!--            android:gravity="center_horizontal|center_vertical"-->
        <!--            android:text="@string/category_maki"-->
        <!--            android:textColor="@color/colorWhite"-->
        <!--            android:translationX="25dp"-->
        <!--            android:visibility="visible" />-->

        <!--        <Button-->
        <!--            android:id="@+id/warme_gerechten"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="150dp"-->
        <!--            android:layout_row="2"-->
        <!--            android:layout_column="0"-->
        <!--            android:layout_columnSpan="0"-->
        <!--            android:layout_gravity="start"-->
        <!--            android:background="@drawable/warmegerechten"-->
        <!--            android:fontFamily="@font/montserrat"-->
        <!--            android:text="@string/category_warme_gerechten"-->
        <!--            android:textColor="@color/colorWhite" />-->


        <!--        <ImageView-->
        <!--            android:id="@+id/imageView"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_row="3"-->
        <!--            android:layout_column="1"-->
        <!--            app:srcCompat="@drawable/uramakitest" />-->

        <!--        <ImageView-->
        <!--            android:id="@+id/imageView2"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_row="3"-->
        <!--            android:layout_column="0"-->
        <!--            android:scaleType="centerInside"-->
        <!--            app:srcCompat="@drawable/nigiri" />-->


        <ImageView
            android:id="@+id/category_temaki"
            android:layout_width="181dp"
            android:layout_height="279dp"
            android:layout_row="0"
            android:layout_rowSpan="2"
            android:layout_column="0"
            android:background="#DFDDDD"
            android:contentDescription="@string/category_temaki"
            android:onClick="category_temaki"
            app:srcCompat="@drawable/temaki"
            tools:srcCompat="@drawable/temaki" />

        <ImageView
            android:id="@+id/category_uramaki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:background="#DFDDDD"
            android:contentDescription="@string/category_uramaki"
            android:scaleType="center"
            app:srcCompat="@drawable/uramaki"
            tools:srcCompat="@drawable/uramaki" />

        <ImageView
            android:id="@+id/category_maki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:background="#DFDDDD"
            android:contentDescription="@string/category_maki"
            android:cropToPadding="false"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/maki" />

        <ImageView
            android:id="@+id/category_warm"
            android:layout_width="match_parent"
            android:layout_height="166dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:background="#DFDDDD"
            android:contentDescription="@string/category_warme_gerechten"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/warmegerechten" />

        <ImageView
            android:id="@+id/category_nigiri"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:background="#DFDDDD"
            android:contentDescription="@string/category_nigiri"
            app:srcCompat="@drawable/nigiri" />

        <ImageView
            android:id="@+id/category_sashimi"
            android:layout_width="177dp"
            android:layout_height="117dp"
            android:layout_row="3"
            android:layout_column="1"
            android:background="#DFDDDD"
            android:contentDescription="@string/category_sashimi"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/sashimi" />
    </GridLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/catrgory_title"
        android:textColor="#DFDDDD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>